edit todolist name works